# clarigrid

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_run.py
app/: __init__.py  env.py  graders.py  models.py  rewards.py  tasks.py
data/: easy_task.json  hard_task.json  medium_task.json
server/: app.py
